# mliot-embeddedc-2026-hw

week01/: main.c
week02/: answer.txt  main.c
week03/: REQUIREMENT.md  answers.txt  build_and_flash.bat
week04/: CMakeLists.txt  README.md  STM32F103C8TX_FLASH.ld  answers.txt  main.c  stm32f1xx_hal_conf.h
